# ci

./: .cirrus.yml  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Dockerfile  Program.cs  README.md  appveyor.yml  ci.csproj  ci.sln  ci.vcxproj  codefresh.yml  index.js  index.test.js  package-lock.json  package.json
.appveyor/: config.yml
.circleci/: config.yml
.semaphore/: semaphore.yml
Properties/: AssemblyInfo.cs
